@@ -1,3 +1,7 @@
+2010-09-12  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar.c (avt_mb_decode): optimized
+
 2010-09-10  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c: handle WCHAR_MAX <= 255
